@@ -108,6 +108,8 @@ Release 0.19.0 - Unreleased
                from org.apache.hadoop.hbase.DroppedSnapshotException
    HBASE-1059  ConcurrentModificationException in notifyChangedReadersObservers
    HBASE-1063  "File separator problem on Windows" (Max Lehn via Stack)
+   HBASE-1068  TestCompaction broken on hudson
+   HBASE-1067  TestRegionRebalancing broken by running of hdfs shutdown thread
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
@@ -177,7 +179,6 @@ Release 0.19.0 - Unreleased
    HBASE-1065  Minor logging improvements in the master
    HBASE-1053  bring recent rpc changes down from hadoop
    HBASE-1056  [migration] enable blockcaching on .META. table
-   HBASE-1068  TestCompaction broken on hudson
 
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
